--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,8 @@ html.lenis body {
 }
 
 #page-preloader svg {
-  transition: opacity 0.5s ease;
+  transition: opacity 1s ease;
+  max-width: 500px;
 }
 
 /* main default style */
@@ -41,4 +42,27 @@ main {
 
 .skip-link {
   opacity: 0;
+}
+
+/* Card Glare Hover effect */
+
+.glow-card > div > img {
+  position: relative;
+}
+
+.glow-card > div.elementor-widget-container {
+  width: fit-content !important;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.glow-card > div > .glare {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  pointer-events: none;
 }
